[package]
name = "dynamic-token"
version = "0.1.0"
edition = "2021"
description = "Encodes and evaluates a time-sensitive dynamic authentication token based on shared API key, a timestamp, some random noise characters and an optional UUID"
repository = "https://github.com/neilg63/dynamic-token"
categories = ["api-bindings", "web-programming", "cryptography"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base-encode = "0.3.1"
base64 = "0.22.0"
rand = "0.8.5"
simple-string-patterns = "0.2.2"
utcnow = "0.2.4"
